[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/HUD_And_GUI/MpBar.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD_And_GUI/StaminaStack.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD_And_GUI/StaminaIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD_And_GUI/StaminaBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/HUD_And_GUI/HpBar.png" type="Texture" id=6]
[ext_resource path="res://HUD/HealthBar/HealthBar.gd" type="Script" id=7]
[ext_resource path="res://Assets/HUD_And_GUI/MpIcon.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD_And_GUI/StaminaStackEmpty.png" type="Texture" id=9]
[ext_resource path="res://Assets/Theme2/HealthIcon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fonts/theme_font/uni_05_53_16px.fnt" type="BitmapFont" id=11]
[ext_resource path="res://Assets/Theme2/lv_circle_progress.png" type="Texture" id=12]
[ext_resource path="res://Assets/Fonts/theme_font/uni_05_53_8px.fnt" type="BitmapFont" id=13]
[ext_resource path="res://Assets/Theme2/picture_frame.png" type="Texture" id=14]
[ext_resource path="res://Assets/Character/Player.png" type="Texture" id=15]
[ext_resource path="res://Assets/Theme2/HealthIconEmpty.png" type="Texture" id=16]
[ext_resource path="res://Assets/Theme2/HealthIconHalf.png" type="Texture" id=17]
[ext_resource path="res://Assets/Theme2/coin.png" type="Texture" id=18]
[ext_resource path="res://Assets/HUD_And_GUI/HpBarFrame.png" type="Texture" id=19]

[node name="HealthBar" type="Control"]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="."]
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarFrame" type="Sprite" parent="Health"]
position = Vector2( 78, 12 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureProgress" type="TextureProgress" parent="Health/BarFrame"]
margin_left = -35.0
margin_top = -5.0
margin_right = 35.0
margin_bottom = 5.0
rect_min_size = Vector2( 70, 10 )
value = 70.0
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpNumber" type="Label" parent="Health/BarFrame"]
margin_left = -31.0
margin_top = -9.0
margin_right = 14.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "30/50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthList" type="HBoxContainer" parent="Health"]
visible = false
margin_left = 43.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 23.0
rect_min_size = Vector2( 80, 12 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIcon1" type="TextureRect" parent="Health/HealthList"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="HealthIcon2" type="TextureRect" parent="Health/HealthList"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="HealthIcon3" type="TextureRect" parent="Health/HealthList"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="HealthIcon4" type="TextureRect" parent="Health/HealthList"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 17 )

[node name="HealthIcon5" type="TextureRect" parent="Health/HealthList"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 16.0
texture = ExtResource( 16 )

[node name="SP" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarFrame" type="Sprite" parent="SP"]
position = Vector2( 78, 24 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureProgress" type="TextureProgress" parent="SP/BarFrame"]
margin_left = -35.0
margin_top = -5.0
margin_right = 35.0
margin_bottom = 5.0
rect_min_size = Vector2( 70, 10 )
value = 50.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MpNumber" type="Label" parent="SP/BarFrame"]
margin_left = -31.0
margin_top = -9.0
margin_right = 35.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "38/50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MpIcon" type="Sprite" parent="SP"]
visible = false
position = Vector2( 8, 26 )
texture = ExtResource( 8 )

[node name="Stamina" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaStack_1" type="Sprite" parent="Stamina"]
visible = false
position = Vector2( 69, 39 )
texture = ExtResource( 2 )

[node name="StaminaStack_2" type="Sprite" parent="Stamina"]
visible = false
position = Vector2( 82, 39 )
texture = ExtResource( 2 )

[node name="StaminaStack_3" type="Sprite" parent="Stamina"]
visible = false
position = Vector2( 95, 39 )
texture = ExtResource( 9 )

[node name="StaminaIcon" type="Sprite" parent="Stamina"]
visible = false
position = Vector2( 9, 39 )
texture = ExtResource( 3 )

[node name="BarFrame" type="Sprite" parent="Stamina"]
position = Vector2( 78, 36 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureProgress" type="TextureProgress" parent="Stamina/BarFrame"]
margin_left = -35.0
margin_top = -5.0
margin_right = 35.0
margin_bottom = 5.0
rect_min_size = Vector2( 70, 10 )
value = 30.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaNumber" type="Label" parent="Stamina/BarFrame"]
margin_left = -31.0
margin_top = -9.0
margin_right = 35.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "38/50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelFrame" type="Sprite" parent="."]
position = Vector2( 24, 24 )
texture = ExtResource( 14 )

[node name="TextureProgress" type="TextureProgress" parent="LevelFrame"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
value = 77.0
texture_progress = ExtResource( 12 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelFrame"]
visible = false
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Level" type="Label" parent="LevelFrame"]
margin_left = -12.0
margin_top = -12.0
margin_right = 14.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 20, 52 )
texture = ExtResource( 18 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="Label" type="Label" parent="Coin"]
margin_left = 6.0
margin_top = -5.0
margin_right = 36.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 60.0
margin_right = 99.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hello World 012345"
__meta__ = {
"_edit_use_anchors_": false
}
